fix(navbar): add high z-index for the section containing the navbar (DA_UK-697)

--- a/packages/layouts/blog-article/src/blog-article.module.css
+++ b/packages/layouts/blog-article/src/blog-article.module.css
@@ -1,4 +1,5 @@
 .blogArticleHeroWrapper {
+  z-index: 1000;
   padding-bottom: var(--spacing-xxl);
 
   @media (--s) {
